[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/items/ColorPaintCan.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/items/PaintCans.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 32 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 64, 48 )

[node name="PaintCans" type="StaticBody2D"]
script = ExtResource( 2 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -32 )

[node name="RedPaintCan" parent="Position2D" instance=ExtResource( 1 )]
position = Vector2( -64, 0 )
paintColor = "red"

[node name="YellowPaintCan" parent="Position2D" instance=ExtResource( 1 )]
paintColor = "yellow"

[node name="BluePaintCan" parent="Position2D" instance=ExtResource( 1 )]
position = Vector2( 64, 0 )
paintColor = "blue"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="PaintCansSelectionArea" type="Area2D" parent="."]

[node name="CollisionSelectionArea" type="CollisionShape2D" parent="PaintCansSelectionArea"]
shape = SubResource( 2 )

[connection signal="area_entered" from="PaintCansSelectionArea" to="." method="_on_PaintCansSelectionArea_area_entered"]
[connection signal="area_exited" from="PaintCansSelectionArea" to="." method="_on_PaintCansSelectionArea_area_exited"]
